Subtle Effects compatibility